--- a/src/locales/en/backend.json
+++ b/src/locales/en/backend.json
@@ -9,5 +9,6 @@
     "connection_string_not_found": "Please specify connection string",
     "bad_connection_string_format": "Provided connection string is not in correct format",
     "unauthorized_user": "User does not allowed to login",
-    "stock_code_empty": "Stock code is not selected. Please try again"
+    "stock_code_empty": "Stock code is not selected. Please try again",
+    "fill_order_error": "Please fill order details"
 }
