--- a/src/locales/id/backend.json
+++ b/src/locales/id/backend.json
@@ -9,5 +9,6 @@
     "connection_string_not_found": "Harap tentukan string koneksi",
     "bad_connection_string_format": "String koneksi yang diberikan tidak dalam format yang benar",
     "unauthorized_user": "Pengguna tidak diizinkan untuk login",
-    "stock_code_empty": "Stock code is not selected. Please try again"
+    "stock_code_empty": "Stock code is not selected. Please try again",
+    "fill_order_error": "Please fill order details"
 }
