fixed repository add video locales

--- a/src/locales/id/menu.json
+++ b/src/locales/id/menu.json
@@ -2,7 +2,9 @@
     "sales_transaction": "Faktur Penjualan",
     "sales_order_transaction": "Faktur Pesanan Penjualan",
     "point_of_sale_transaction": "Tempat Penjualan",
+    "transcation_module": "Transaction Module",
     "stock_adjusment": "Penyesuaian Stok",
+    "video": "Videos",
     "scan_barcode": "Pindai Barcode",
     "switch_database": "Ganti Basis Data",
     "registration": "Registrasi",
