--- a/src/locales/id/menu.json
+++ b/src/locales/id/menu.json
@@ -4,7 +4,7 @@
     "point_of_sale_transaction": "Tempat Penjualan",
     "transcation_module": "Transaction Module",
     "stock_adjusment": "Penyesuaian Stok",
-    "video": "Videos",
+    "video": "Video",
     "scan_barcode": "Pindai Barcode",
     "switch_database": "Ganti Basis Data",
     "registration": "Registrasi",
