--- a/src/locales/en/menu.json
+++ b/src/locales/en/menu.json
@@ -3,7 +3,7 @@
     "sales_order_transaction": "Sales Order Invoice",
     "point_of_sale_transaction": "Point of Sale",
     "transcation_module": "Transaction Module",
-    "video": "Videos",
+    "video": "Video",
     "stock_adjusment": "Stock Adjusment",
     "scan_barcode": "Scan Barcode",
     "switch_database": "Switch Database",
