--- a/src/locales/en/backend.json
+++ b/src/locales/en/backend.json
@@ -10,5 +10,6 @@
     "bad_connection_string_format": "Provided connection string is not in correct format",
     "unauthorized_user": "User does not allowed to login",
     "stock_code_empty": "Stock code is not selected. Please try again",
-    "fill_order_error": "Please fill order details"
+    "fill_order_error": "Please fill order details",
+    "location_not_found": "Location not found"
 }
