--- a/src/locales/en/others.json
+++ b/src/locales/en/others.json
@@ -1,5 +1,5 @@
 {
-    "select_stock_group": "Select a Stock group",
-    "select_warehouse": "Select a Warehouse",
+    "select_stock_group": "Select Stock Group",
+    "select_warehouse": "Select Warehouse",
     "select_date": "Select Date"
 }
