--- a/src/locales/id/menu.json
+++ b/src/locales/id/menu.json
@@ -1,15 +1,14 @@
 {
-    "sales_transaction": "Faktur Penjualan",
-    "sales_order_transaction": "Faktur Pesanan Penjualan",
-    "point_of_sale_transaction": "Tempat Penjualan",
-    "transcation_module": "Transaction Module",
-    "stock_adjusment": "Penyesuaian Stok",
+    "sales_transaction": "Penjualan",
+    "sales_order_transaction": "Sales Order",
+    "point_of_sale_transaction": "Point Of Sale",
+    "stock_adjusment": "Opname Stock",
     "video": "Video",
-    "scan_barcode": "Pindai Barcode",
-    "switch_database": "Ganti Basis Data",
+    "scan_barcode": "Scan Barcode",
+    "switch_database": "Ganti Database",
     "registration": "Registrasi",
     "stock_report": "Saldo Stock",
-    "price_report": "Laporan Harga",
+    "price_report": "Price List",
     "purchasing_report": "Laporan Pembelian",
     "purchasing_report_no_disc": "Laporan Pembelian (No Disc)",
     "purchasing_analyst_report": "Analisa Pembelian",
@@ -23,39 +22,40 @@
     "select_stock_group": "Pilih Golongan",
     "select_warehouse": "Pilih Lokasi",
     "select_date": "Pilih Tanggal",
-    "select_database": "Pilih Basis Data",
-    "connect": "Hubungkan",
-    "filter": "Saring",
-    "clear": "Bersihkan",
+    "select_database": "Pilih Database",
+    "connect": "Connect",
+    "filter": "Filter",
+    "clear": "Clear",
     "page": "Halaman",
     "of": "dari",
-    "enter_stock_id": "Masukkan ID Stok",
+    "enter_stock_id": "Masukkan Kode Stock",
     "search": "Cari di",
     "next": "Berikutnya",
     "previous": "Sebelumnya",
-    "registration_placeholder": "Masukkan kunci registrasi Anda",
-    "set_key": "Setel Kunci Registrasi",
-    "get_dev_num": "Dapatkan Nomor Perangkat",
-    "dev_num": "Nomor Perangkat",
-    "transaction_1": "Data Faktur",
-    "transaction_2": "Detail Pesanan",
-    "transaction_3": "Detail Pembayaran",
+    "registration_placeholder": "Masukkan Kode Registrasi",
+    "set_key": "Setting Kode Registrasi",
+    "get_dev_num": "Dapatkan Nomor IMEI",
+    "dev_num": "Nomor IMEI",
+    "transaction_1": "Nota",
+    "transaction_2": "Item",
+    "transaction_3": "Pembayaran",
     "error": "Error",
     "sent": "Sent",
     "warning:": "Warning",
-    "confirmation": "Confirmation",
-    "proceed": "Do you want to proceed",
-    "complete": "Transaction Completed",
-    "fill_order": "Please fill order details",
-    "fill_customer": "Please select a customer",
-    "fill_payment": "Payment not completed",
+    "confirmation": "Konfirmasi",
+    "proceed": "Rekam?",
+    "complete": "Transaksi Selesai",
+    "fill_order": "Harap isi item",
+    "fill_customer": "Harap pilih Langganan",
+    "fill_payment": "Belum ada pembayaran",
     "invalid_key": "Invalid Key",
-    "success": "Success",
-    "limit": "limit",
-    "limit_error": "Limit reached cant add more than 3 items",
+    "success": "Sukses",
     "close": "Close",
-    "error_fetching_imei": "Error fetching IMEI",
-    "invalid_key_message": "Registration Key Must Be 5 Characters",
-    "registration_set_success": "Registration key has been set",
-    "invalid_key_warning": "Please enter a valid registration key"
+    "error_fetching_imei": "Error cari IMEI",
+    "warning": "Warning",
+    "invalid_key_message": "Kode Registrasi minimum 5 karakter",
+    "registration_set_success": "Kode Registrasi berhasil",
+    "invalid_key_warning": "Harap isi Kode Registrasi",
+    "limit": "Demo Version",
+    "limit_error": "Harap Registrasi untuk Full version"
 }
