--- a/src/locales/en/menu.json
+++ b/src/locales/en/menu.json
@@ -2,9 +2,8 @@
     "sales_transaction": "Sales Invoice",
     "sales_order_transaction": "Sales Order Invoice",
     "point_of_sale_transaction": "Point of Sale",
-    "transcation_module": "Transaction Module",
+    "stock_adjusment": "Stock Adjustment",
     "video": "Video",
-    "stock_adjusment": "Stock Adjusment",
     "scan_barcode": "Scan Barcode",
     "switch_database": "Switch Database",
     "registration": "Registration",
@@ -20,15 +19,15 @@
     "sales_analyst_report_2": "Sales Analyst Report (No Disc)",
     "cash_drawer_report": "Cash Drawer Report",
     "cash_drawer_report_detail": "Cash Drawer Report (Detail)",
-    "select_stock_group": "Select a Stock group",
-    "select_warehouse": "Select a Warehouse",
+    "select_stock_group": "Select Stock Group",
+    "select_warehouse": "Select Warehouse",
     "select_date": "Select Date",
     "select_database": "Select Database",
     "connect": "Connect",
     "filter": "Filter",
     "clear": "Clear",
     "page": "Page",
-    "enter_stock_id": "Enter Stock ID",
+    "enter_stock_id": "Enter Stock Code",
     "of": "of",
     "search": "Search in",
     "next": "Next",
@@ -42,6 +41,7 @@
     "transaction_3": "Payment Details",
     "error": "Error",
     "sent": "Sent",
+    "warning:": "Warning",
     "confirmation": "Confirmation",
     "proceed": "Do you want to proceed",
     "complete": "Transaction Completed",
@@ -49,13 +49,13 @@
     "fill_customer": "Please select a customer",
     "fill_payment": "Payment not completed",
     "invalid_key": "Invalid Key",
-    "limit": "Limit reached",
-    "limit_error": "Limit reached cant add more than 3 items",
     "success": "Success",
     "close": "Close",
     "error_fetching_imei": "Error fetching IMEI",
     "warning": "Warning",
     "invalid_key_message": "Registration Key Must Be 5 Characters",
     "registration_set_success": "Registration key has been set",
-    "invalid_key_warning": "Please enter a valid registration key"
+    "invalid_key_warning": "Please enter a valid registration key",
+    "limit": "Demo Version",
+    "limit_error": "Please register for Full version"
 }
