added search with stock name and stock code

--- a/src/locales/id/menu.json
+++ b/src/locales/id/menu.json
@@ -28,6 +28,7 @@
     "clear": "Clear",
     "page": "Halaman",
     "of": "dari",
+    "stock_code": "Stock Code, Stock Name",
     "enter_stock_id": "Masukkan Kode Stock",
     "search": "Cari di",
     "next": "Berikutnya",
