Add stock balance report purchase price

--- a/src/locales/en/menu.json
+++ b/src/locales/en/menu.json
@@ -1,63 +1,64 @@
 {
-    "sales_transaction": "Sales Invoice",
-    "sales_order_transaction": "Sales Order Invoice",
-    "point_of_sale_transaction": "Point of Sale",
-    "stock_adjusment": "Stock Adjustment",
-    "video": "Video",
-    "scan_barcode": "Scan Barcode",
-    "scan_barcode_purchase_price": "Scan Barcode (Purchase Price)",
-    "switch_database": "Switch Database",
-    "registration": "Registration",
-    "stock_report": "Stock Report",
-    "price_report": "Price Report",
-    "purchasing_report": "Purchasing Report",
-    "purchasing_report_no_disc": "Purchasing Report (No Disc)",
-    "purchasing_analyst_report": "Purchasing Analyst Report",
-    "purchasing_analyst_report_no_disc": "Purchasing Analyst Report (No Disc)",
-    "sales_report": "Sales Report",
-    "sales_report_2": "Sales Report (No Disc)",
-    "sales_analyst_report": "Sales Analyst Report",
-    "sales_analyst_report_2": "Sales Analyst Report (No Disc)",
-    "cash_drawer_report": "Cash Drawer Report",
-    "cash_drawer_report_detail": "Cash Drawer Report (Detail)",
-    "select_stock_group": "Select Stock Group",
-    "select_warehouse": "Select Warehouse",
-    "select_date": "Select Date",
-    "select_database": "Select Database",
-    "connect": "Connect",
-    "filter": "Filter",
-    "clear": "Clear",
-    "page": "Page",
-    "enter_stock_id": "Enter Stock Code",
-    "of": "of",
-    "search": "Search in",
-    "stock_code": "Stock Code, Stock Name", 
-    "next": "Next",
-    "previous": "Previous",
-    "registration_placeholder": "Enter your registration key",
-    "set_key": "Set Registration Key",
-    "get_dev_num": "Get Device Number",
-    "dev_num": "Device Number",
-    "transaction_1": "Invoice Data",
-    "transaction_2": "Order Detail",
-    "transaction_3": "Payment Details",
-    "error": "Error",
-    "sent": "Sent",
-    "warning:": "Warning",
-    "confirmation": "Confirmation",
-    "proceed": "Do you want to proceed",
-    "complete": "Transaction Completed",
-    "fill_order": "Please fill order details",
-    "fill_customer": "Please select a customer",
-    "fill_payment": "Payment not completed",
-    "invalid_key": "Invalid Key",
-    "success": "Success",
-    "close": "Close",
-    "error_fetching_imei": "Error fetching IMEI",
-    "warning": "Warning",
-    "invalid_key_message": "Registration Key Must Be 5 Characters",
-    "registration_set_success": "Registration key has been set",
-    "invalid_key_warning": "Please enter a valid registration key",
-    "limit": "Demo Version",
-    "limit_error": "Please register for Full version"
+  "sales_transaction": "Sales Invoice",
+  "sales_order_transaction": "Sales Order Invoice",
+  "point_of_sale_transaction": "Point of Sale",
+  "stock_adjusment": "Stock Adjustment",
+  "video": "Video",
+  "scan_barcode": "Scan Barcode",
+  "scan_barcode_purchase_price": "Scan Barcode (Purchase Price)",
+  "switch_database": "Switch Database",
+  "registration": "Registration",
+  "stock_report": "Stock Report",
+  "stock_balance_report_purchase_price": "Stock Report Purchase Price",
+  "price_report": "Price Report",
+  "purchasing_report": "Purchasing Report",
+  "purchasing_report_no_disc": "Purchasing Report (No Disc)",
+  "purchasing_analyst_report": "Purchasing Analyst Report",
+  "purchasing_analyst_report_no_disc": "Purchasing Analyst Report (No Disc)",
+  "sales_report": "Sales Report",
+  "sales_report_2": "Sales Report (No Disc)",
+  "sales_analyst_report": "Sales Analyst Report",
+  "sales_analyst_report_2": "Sales Analyst Report (No Disc)",
+  "cash_drawer_report": "Cash Drawer Report",
+  "cash_drawer_report_detail": "Cash Drawer Report (Detail)",
+  "select_stock_group": "Select Stock Group",
+  "select_warehouse": "Select Warehouse",
+  "select_date": "Select Date",
+  "select_database": "Select Database",
+  "connect": "Connect",
+  "filter": "Filter",
+  "clear": "Clear",
+  "page": "Page",
+  "enter_stock_id": "Enter Stock Code",
+  "of": "of",
+  "search": "Search in",
+  "stock_code": "Stock Code, Stock Name",
+  "next": "Next",
+  "previous": "Previous",
+  "registration_placeholder": "Enter your registration key",
+  "set_key": "Set Registration Key",
+  "get_dev_num": "Get Device Number",
+  "dev_num": "Device Number",
+  "transaction_1": "Invoice Data",
+  "transaction_2": "Order Detail",
+  "transaction_3": "Payment Details",
+  "error": "Error",
+  "sent": "Sent",
+  "warning:": "Warning",
+  "confirmation": "Confirmation",
+  "proceed": "Do you want to proceed",
+  "complete": "Transaction Completed",
+  "fill_order": "Please fill order details",
+  "fill_customer": "Please select a customer",
+  "fill_payment": "Payment not completed",
+  "invalid_key": "Invalid Key",
+  "success": "Success",
+  "close": "Close",
+  "error_fetching_imei": "Error fetching IMEI",
+  "warning": "Warning",
+  "invalid_key_message": "Registration Key Must Be 5 Characters",
+  "registration_set_success": "Registration key has been set",
+  "invalid_key_warning": "Please enter a valid registration key",
+  "limit": "Demo Version",
+  "limit_error": "Please register for Full version"
 }
