--- a/src/locales/id/menu.json
+++ b/src/locales/id/menu.json
@@ -1,63 +1,64 @@
 {
-    "sales_transaction": "Penjualan",
-    "sales_order_transaction": "Sales Order",
-    "point_of_sale_transaction": "Point Of Sale",
-    "stock_adjusment": "Opname Stock",
-    "video": "Video",
-    "scan_barcode": "Scan Barcode",
-    "scan_barcode_purchase_price": "Scan Barcode (Purchase Price)",
-    "switch_database": "Ganti Database",
-    "registration": "Registrasi",
-    "stock_report": "Saldo Stock",
-    "price_report": "Price List",
-    "purchasing_report": "Laporan Pembelian",
-    "purchasing_report_no_disc": "Laporan Pembelian (No Disc)",
-    "purchasing_analyst_report": "Analisa Pembelian",
-    "purchasing_analyst_report_no_disc": "Analisa Pembelian (No Disc)",
-    "sales_report": "Laporan Penjualan",
-    "sales_report_2": "Laporan Penjualan (No Disc)",
-    "sales_analyst_report": "Analisa Penjualan",
-    "sales_analyst_report_2": "Analisa Penjualan (No Disc)",
-    "cash_drawer_report": "Laporan Cash Drawer",
-    "cash_drawer_report_detail": "Laporan Cash Drawer (Detail)",
-    "select_stock_group": "Pilih Golongan",
-    "select_warehouse": "Pilih Lokasi",
-    "select_date": "Pilih Tanggal",
-    "select_database": "Pilih Database",
-    "connect": "Connect", 
-    "filter": "Filter",
-    "clear": "Clear",
-    "page": "Halaman",
-    "of": "dari",
-    "stock_code": "Stock Code, Stock Name",
-    "enter_stock_id": "Masukkan Kode Stock",
-    "search": "Cari di",
-    "next": "Berikutnya",
-    "previous": "Sebelumnya",
-    "registration_placeholder": "Masukkan Kode Registrasi",
-    "set_key": "Setting Kode Registrasi",
-    "get_dev_num": "Dapatkan Nomor IMEI",
-    "dev_num": "Nomor IMEI",
-    "transaction_1": "Nota",
-    "transaction_2": "Item",
-    "transaction_3": "Pembayaran",
-    "error": "Error",
-    "sent": "Sent",
-    "warning:": "Warning",
-    "confirmation": "Konfirmasi",
-    "proceed": "Rekam?",
-    "complete": "Transaksi Selesai",
-    "fill_order": "Harap isi item",
-    "fill_customer": "Harap pilih Langganan",
-    "fill_payment": "Belum ada pembayaran",
-    "invalid_key": "Invalid Key",
-    "success": "Sukses",
-    "close": "Close",
-    "error_fetching_imei": "Error cari IMEI",
-    "warning": "Warning",
-    "invalid_key_message": "Kode Registrasi minimum 5 karakter",
-    "registration_set_success": "Kode Registrasi berhasil",
-    "invalid_key_warning": "Harap isi Kode Registrasi",
-    "limit": "Demo Version",
-    "limit_error": "Harap Registrasi untuk Full version"
+  "sales_transaction": "Penjualan",
+  "sales_order_transaction": "Sales Order",
+  "point_of_sale_transaction": "Point Of Sale",
+  "stock_adjusment": "Opname Stock",
+  "video": "Video",
+  "scan_barcode": "Scan Barcode",
+  "scan_barcode_purchase_price": "Scan Barcode (Laporan Price)",
+  "switch_database": "Ganti Database",
+  "registration": "Registrasi",
+  "stock_report": "Saldo Stock",
+  "stock_balance_report_purchase_price": "Saldo Stock (Laporan Price)",
+  "price_report": "Price List",
+  "purchasing_report": "Laporan Pembelian",
+  "purchasing_report_no_disc": "Laporan Pembelian (No Disc)",
+  "purchasing_analyst_report": "Analisa Pembelian",
+  "purchasing_analyst_report_no_disc": "Analisa Pembelian (No Disc)",
+  "sales_report": "Laporan Penjualan",
+  "sales_report_2": "Laporan Penjualan (No Disc)",
+  "sales_analyst_report": "Analisa Penjualan",
+  "sales_analyst_report_2": "Analisa Penjualan (No Disc)",
+  "cash_drawer_report": "Laporan Cash Drawer",
+  "cash_drawer_report_detail": "Laporan Cash Drawer (Detail)",
+  "select_stock_group": "Pilih Golongan",
+  "select_warehouse": "Pilih Lokasi",
+  "select_date": "Pilih Tanggal",
+  "select_database": "Pilih Database",
+  "connect": "Connect",
+  "filter": "Filter",
+  "clear": "Clear",
+  "page": "Halaman",
+  "of": "dari",
+  "stock_code": "Stock Code, Stock Name",
+  "enter_stock_id": "Masukkan Kode Stock",
+  "search": "Cari di",
+  "next": "Berikutnya",
+  "previous": "Sebelumnya",
+  "registration_placeholder": "Masukkan Kode Registrasi",
+  "set_key": "Setting Kode Registrasi",
+  "get_dev_num": "Dapatkan Nomor IMEI",
+  "dev_num": "Nomor IMEI",
+  "transaction_1": "Nota",
+  "transaction_2": "Item",
+  "transaction_3": "Pembayaran",
+  "error": "Error",
+  "sent": "Sent",
+  "warning:": "Warning",
+  "confirmation": "Konfirmasi",
+  "proceed": "Rekam?",
+  "complete": "Transaksi Selesai",
+  "fill_order": "Harap isi item",
+  "fill_customer": "Harap pilih Langganan",
+  "fill_payment": "Belum ada pembayaran",
+  "invalid_key": "Invalid Key",
+  "success": "Sukses",
+  "close": "Close",
+  "error_fetching_imei": "Error cari IMEI",
+  "warning": "Warning",
+  "invalid_key_message": "Kode Registrasi minimum 5 karakter",
+  "registration_set_success": "Kode Registrasi berhasil",
+  "invalid_key_warning": "Harap isi Kode Registrasi",
+  "limit": "Demo Version",
+  "limit_error": "Harap Registrasi untuk Full version"
 }
