--- a/src/locales/en/headers.json
+++ b/src/locales/en/headers.json
@@ -42,6 +42,14 @@
     "price_header": "Price",
     "balance_header": "Balance"
   },
+  "stock_balance_report_purchase_price": {
+    "stock_id_header": "Stock Code",
+    "stock_name_header": "Stock Name",
+    "location_header": "Location",
+    "qty_header": "Quantity",
+    "price_header": "Price",
+    "balance_header": "Balance"
+  },
   "purchasing_report": {
     "invoice_header": "Invoice",
     "date_header": "Date",
@@ -75,14 +83,14 @@
   "sales_report": {
     "invoice_header": "Invoice",
     "date_header": "Date",
-    "customer_header": "Customer",       
+    "customer_header": "Customer",
     "currency_header": "Curr",
     "amount_header": "Amount"
   },
   "sales_report_2": {
     "invoice_header": "Invoice",
     "date_header": "Date",
-    "customer_header": "Customer",           
+    "customer_header": "Customer",
     "currency_header": "Curr",
     "amount_header": "Amount"
   },
