--- a/src/locales/id/others.json
+++ b/src/locales/id/others.json
@@ -15,5 +15,11 @@
   "pairing_status": "Pairing Status",
   "paired": "Paired",
   "un_paired": "Un-Paired",
-  "device_selected": "Device On/Off"
+  "device_selected": "Device On/Off",
+  "print_complete": "Printing Complete",
+  "print_complete_success": "Printing has been completed successfully.",
+  "print_error": "Printing Error",
+  "print_error_msg": "There is an error while printing. Please check your printer.",
+  "print_inprogress_msg": "Printing is in progress. Please wait.",
+  "print_inprogress": "Printing"
 }
