--- a/src/locales/id/others.json
+++ b/src/locales/id/others.json
@@ -21,5 +21,8 @@
   "print_error": "Printing Error",
   "print_error_msg": "There is an error while printing. Please check your printer.",
   "print_inprogress_msg": "Printing is in progress. Please wait.",
-  "print_inprogress": "Printing"
+  "print_inprogress": "Printing",
+  "unknown_device": "Unknown device",
+  "no_printer_setup": "No printer Setup",
+  "connect_printer_first": "No printer is connected. Please goback to setup printer screen."
 }
