--- a/src/locales/id/others.json
+++ b/src/locales/id/others.json
@@ -15,11 +15,14 @@
   "pairing_status": "Pairing Status",
   "paired": "Paired",
   "un_paired": "Un-Paired",
-  "device_selected": "Device On/Off",
+  "device_selected": "Setting On/Off",
   "print_complete": "Printing Complete",
   "print_complete_success": "Printing has been completed successfully.",
   "print_error": "Printing Error",
   "print_error_msg": "There is an error while printing. Please check your printer.",
   "print_inprogress_msg": "Printing is in progress. Please wait.",
-  "print_inprogress": "Printing"
+  "print_inprogress": "Printing",
+  "unknown_device": "Unknown device",
+  "no_printer_setup": "No printer Setup",
+  "connect_printer_first": "No printer is connected. Please goback to setup printer screen."
 }
