--- a/src/locales/en/others.json
+++ b/src/locales/en/others.json
@@ -29,5 +29,7 @@
   "print_inprogress": "Printing",
   "print_inprogress_msg": "Printing is in progress. Please wait.",
   "no_printer_setup": "No printer Setup",
-  "connect_printer_first": "No printer is connected. Please goback to setup printer screen."
+  "connect_printer_first": "No printer is connected. Please goback to setup printer screen.",
+  "fill": "Fill",
+  "clear": "Clear"
 }
